--- a/requirements.txt
+++ b/requirements.txt
@@ -3,48 +3,55 @@ aiobotocore==2.2.0
 aiohttp==3.8.1
 aioitertools==0.10.0
 aiosignal==1.2.0
-anyio==3.5.0
+alembic==1.7.7
+anyio==3.6.1
 argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
-asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1618968359944/work
+asttokens==2.0.5
+async-generator==1.10
 async-timeout==4.0.2
-attrs @ file:///home/conda/feedstock_root/build_artifacts/attrs_1640799537051/work
+attrs==21.4.0
 Babel==2.10.1
-backcall @ file:///home/conda/feedstock_root/build_artifacts/backcall_1592338393461/work
-backports.functools-lru-cache @ file:///home/conda/feedstock_root/build_artifacts/backports.functools_lru_cache_1618230623929/work
+backcall==0.2.0
 bcrypt==3.2.2
-beautifulsoup4 @ file:///home/conda/feedstock_root/build_artifacts/beautifulsoup4_1649463573192/work
-bleach @ file:///home/conda/feedstock_root/build_artifacts/bleach_1649361991009/work
+beautifulsoup4==4.11.1
+bleach==5.0.0
 boto3==1.21.21
 botocore==1.24.21
-branca @ file:///home/conda/feedstock_root/build_artifacts/branca_1609346930842/work
-cachetools==5.0.0
+cachetools==5.1.0
 certifi==2021.10.8
+certipy==0.1.3
 cffi==1.15.0
 charset-normalizer==2.0.12
 click==8.1.3
 click-plugins==1.1.1
 cligj==0.7.2
 cloudpickle==2.0.0
+colorama==0.4.4
 cryptography==37.0.2
 cycler==0.11.0
+Cython==0.29.30
 debugpy==1.6.0
-decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1641555617451/work
-defusedxml @ file:///home/conda/feedstock_root/build_artifacts/defusedxml_1615232257335/work
+decorator==5.1.1
+defusedxml==0.7.1
 Deprecated==1.2.13
 docker==5.0.3
-entrypoints @ file:///home/conda/feedstock_root/build_artifacts/entrypoints_1643888246732/work
-executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1646044401614/work
-fastjsonschema @ file:///home/conda/feedstock_root/build_artifacts/python-fastjsonschema_1641751198313/work/dist
+earthpy==0.9.4
+entrypoints==0.4
+executing==0.8.3
+fastjsonschema==2.15.3
 Fiona==1.8.21
 fonttools==4.33.3
 frozenlist==1.3.0
 fsspec==2022.3.0
-GDAL==3.3.1
 geojson==2.5.0
 geomet==0.3.0
+geopandas==0.10.2
+gitdb==4.0.9
+GitPython==3.1.27
 google-auth==2.6.6
 grass-session==0.5
+greenlet==1.1.2
 html2text==2020.1.16
 ibm-cloud-sdk-core==3.15.1
 ibm-cos-sdk==2.11.0
@@ -52,112 +59,127 @@ ibm-cos-sdk-core==2.11.0
 ibm-cos-sdk-s3transfer==2.11.0
 ibm-vpc==0.11.0
 idna==3.3
-importlib-metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1648728288044/work
-importlib-resources @ file:///home/conda/feedstock_root/build_artifacts/importlib_resources_1650169872758/work
-ipykernel @ file:///home/conda/feedstock_root/build_artifacts/ipykernel_1649684276995/work/dist/ipykernel-6.13.0-py3-none-any.whl
-ipyleaflet @ file:///home/conda/feedstock_root/build_artifacts/ipyleaflet_1649938352354/work
-ipython @ file:///home/conda/feedstock_root/build_artifacts/ipython_1651238283435/work
+imageio==2.19.2
+importlib-metadata==4.11.3
+ipykernel==6.13.0
+ipython==8.3.0
 ipython-genutils==0.2.0
-ipywidgets @ file:///home/conda/feedstock_root/build_artifacts/ipywidgets_1647456365981/work
-jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1649067096717/work
-Jinja2 @ file:///home/conda/feedstock_root/build_artifacts/jinja2_1651774399431/work
+ipywidgets==7.7.0
+ipyleaflet==0.16.0
+jedi==0.18.1
+Jinja2==3.1.2
 jmespath==0.10.0
+joblib==1.1.0
 json5==0.9.8
-jsonschema @ file:///home/conda/feedstock_root/build_artifacts/jsonschema-meta_1651798819471/work
+jsonschema==4.5.1
 jupyter-client==7.3.1
-jupyter-console==6.4.3
 jupyter-core==4.10.0
 jupyter-server==1.17.0
-jupyterlab==3.4.1
-jupyterlab-pygments @ file:///home/conda/feedstock_root/build_artifacts/jupyterlab_pygments_1649936611996/work
+jupyter-server-mathjax==0.2.5
+jupyter-telemetry==0.1.0
+jupyterhub==2.3.0
+jupyterlab==3.4.2
+jupyterlab-git==0.37.1
+jupyterlab-pygments==0.2.2
+jupyterlab-s3-browser==0.12.0
 jupyterlab-server==2.13.0
-jupyterlab-widgets @ file:///home/conda/feedstock_root/build_artifacts/jupyterlab_widgets_1647446862951/work
+jupyterlab-widgets==1.1.0
 kiwisolver==1.4.2
 kubernetes==23.6.0
 lithops==2.6.0
 lxml==4.8.0
+Mako==1.2.0
 MarkupSafe==2.1.1
 matplotlib==3.5.2
-matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1631080358261/work
+matplotlib-inline==0.1.3
 mgrs==1.4.5
-mistune @ file:///home/conda/feedstock_root/build_artifacts/mistune_1624941317779/work
+mistune==0.8.4
 morecantile==3.1.2
 multidict==6.0.2
 munch==2.5.0
 nbclassic==0.3.7
-nbclient @ file:///home/conda/feedstock_root/build_artifacts/nbclient_1652155694429/work
-nbconvert @ file:///home/conda/feedstock_root/build_artifacts/nbconvert-meta_1649676641343/work
-nbformat @ file:///home/conda/feedstock_root/build_artifacts/nbformat_1651607001005/work
-nest-asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1648959695634/work
-notebook @ file:///home/conda/feedstock_root/build_artifacts/notebook_1650363291341/work
+nbclient==0.6.3
+nbconvert==6.5.0
+nbdime==3.1.1
+nbformat==5.4.0
+nest-asyncio==1.5.5
+networkx==2.8
+notebook==6.4.11
 notebook-shim==0.1.0
 numpy==1.22.3
 oauthlib==3.2.0
-packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1637239678211/work
+packaging==21.3
+pamela==1.0.0
 pandas==1.4.2
-pandocfilters @ file:///home/conda/feedstock_root/build_artifacts/pandocfilters_1631603243851/work
-paramiko==2.10.4
-parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1638334955874/work
-PDAL==2.4.2
-pexpect @ file:///home/conda/feedstock_root/build_artifacts/pexpect_1602535608087/work
-pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1602536217715/work
+pandocfilters==1.5.0
+paramiko==2.11.0
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
 pika==1.2.1
-Pillow==9.1.0
-pkgconfig @ file:///home/conda/feedstock_root/build_artifacts/pkgconfig_1648797876156/work
-prometheus-client @ file:///home/conda/feedstock_root/build_artifacts/prometheus_client_1649447152425/work
-prompt-toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1649130487073/work
+Pillow==9.1.1
+prometheus-client==0.14.1
+prompt-toolkit==3.0.29
 ps-mem==3.12
 psutil==5.9.0
-ptyprocess @ file:///home/conda/feedstock_root/build_artifacts/ptyprocess_1609419310487/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
-pure-eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1642875951954/work
+ptyprocess==0.7.0
+pure-eval==0.2.2
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
-pycparser @ file:///home/conda/feedstock_root/build_artifacts/pycparser_1636257122734/work
+pycparser==2.21
 pydantic==1.9.0
-Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1650904496387/work
-PyJWT==2.3.0
+Pygments==2.12.0
+PyJWT==2.4.0
 PyNaCl==1.5.0
-pyparsing @ file:///home/conda/feedstock_root/build_artifacts/pyparsing_1652235407899/work
+pyOpenSSL==22.0.0
+pyparsing==3.0.9
 pyproj==3.3.1
 pyrsistent==0.18.1
-python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1626286286081/work
+python-dateutil==2.8.2
+python-json-logger==2.0.2
 pytz==2022.1
+PyWavelets==1.3.0
 PyYAML==6.0
 pyzmq==22.3.0
-qtconsole==5.3.0
-QtPy==2.1.0
 rasterio==1.2.10
 redis==4.3.1
 requests==2.27.1
 requests-oauthlib==1.3.1
 rio-cogeo==3.2.0
 rsa==4.8
+ruamel.yaml==0.17.21
+ruamel.yaml.clib==0.2.6
 s3fs==2022.3.0
 s3transfer==0.5.2
+scikit-image==0.19.2
+scikit-learn==1.1.0
 scipy==1.8.0
 seaborn==0.11.2
-Send2Trash @ file:///home/conda/feedstock_root/build_artifacts/send2trash_1628511208346/work
+Send2Trash==1.8.0
 sentinelsat==1.1.1
 Shapely==1.8.2
-six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
+singleton-decorator==1.0.0
+six==1.16.0
+smmap==5.0.0
 sniffio==1.2.0
 snuggs==1.4.7
 soupsieve==2.3.2.post1
-stack-data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1644872665635/work
+SQLAlchemy==1.4.36
+stack-data==0.2.0
 tblib==1.7.0
-terminado @ file:///home/conda/feedstock_root/build_artifacts/terminado_1649103779998/work
-tinycss2 @ file:///home/conda/feedstock_root/build_artifacts/tinycss2_1637612658783/work
-tornado @ file:///home/conda/feedstock_root/build_artifacts/tornado_1610094708661/work
+terminado==0.15.0
+threadpoolctl==3.1.0
+tifffile==2022.5.4
+tinycss2==1.1.1
+tornado==6.1
 tqdm==4.64.0
-traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1652201717608/work
-traittypes @ file:///home/conda/feedstock_root/build_artifacts/traittypes_1600843364635/work
+traitlets==5.2.1.post0
 typing_extensions==4.2.0
 urllib3==1.26.9
-wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1600965781394/work
+wcwidth==0.2.5
 webencodings==0.5.1
 websocket-client==1.3.2
-widgetsnbextension @ file:///home/conda/feedstock_root/build_artifacts/widgetsnbextension_1647446890517/work
+widgetsnbextension==3.6.0
 wrapt==1.14.1
-xyzservices @ file:///home/conda/feedstock_root/build_artifacts/xyzservices_1649934406482/work
 yarl==1.7.2
-zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1649012893348/work
+zipp==3.8.0
