--- a/water-consumption/runtime/requirements.txt
+++ b/water-consumption/runtime/requirements.txt
@@ -46,7 +46,7 @@ pyproj==3.3.1
 python-dateutil==2.8.2
 pytz==2022.1
 PyYAML==6.0
-rasterio==1.2.10
+rasterio
 redis==4.3.2
 requests==2.27.1
 requests-oauthlib==1.3.1
