--- a/water-consumption/runtime/requirements.txt
+++ b/water-consumption/runtime/requirements.txt
@@ -7,7 +7,7 @@ charset-normalizer==2.0.12
 click==8.1.3
 click-plugins==1.1.1
 cligj==0.7.2
-cloudpickle==2.1.0
+cloudpickle
 Deprecated==1.2.13
 Fiona==1.8.21
 Flask==2.1.2
